Updated friendsOption GUI with more functionality